# caret

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  PLUGINS.md  SMOKE_TEST_0.6.md  SMOKE_TEST_0.7.md
examples/: folding.cs  welcome.rs
examples/plugins/: sample.toml  uppercase.ps1
src/: app.rs  clipboard.rs  config.rs  diagnostics.rs  document.rs  editor.rs  fuzzy.rs  keys.rs  lsp.rs  main.rs  plugin.rs  project.rs  project_search.rs  recovery.rs  search.rs  session.rs  syntax.rs  tabs.rs  terminal.rs  theme.rs  ui.rs
src/app/: persistence.rs  settings.rs
src/platform/: mod.rs  unix.rs  windows.rs
