[package]
name = "caret-editor"
version = "0.5.0"
edition = "2021"
description = "A fast, polished terminal text editor written in Rust"
license = "MIT"
authors = ["Thomas Graffam"]
repository = "https://example.invalid/caret-editor"
keywords = ["editor", "terminal", "tui", "cli", "rust"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "caret"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
crossterm = "0.29"
directories = "6.0"
ignore = "0.4"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tree-sitter = "0.26"
tree-sitter-bash = "0.25.1"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
unicode-width = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
